Fix menu, so it is visible to tablets and mobile.

--- a/less/main/theme.less
+++ b/less/main/theme.less
@@ -10,6 +10,7 @@
 // #Page Styles
 // #Content
 // #Footer
+// #Widget Overlay
 //
 // ----------------------------------------
 
@@ -24,14 +25,18 @@
 	.header-border-removal();
 }
 
-.header__flexbox {
+.header__flexbox.container {
 	display: flex;
 	display: -webkit-flex;
 	-webkit-align-items: center;
     align-items: center;
     -webkit-align-self: center;
     align-self: center;
-    //height: 120px;
+
+    @media @tablet {
+        padding: 10px 20px 10px 10px;
+        width: 100%;
+    }
 }
 
 
@@ -156,16 +161,10 @@ article, aside, dialog, figcaption, figure, footer, header, hgroup, main, nav, s
 	}
 }
 
+// ------------------------------
+// #Widget Overlay
+// ------------------------------
 
-
-
-
-
-
-
-
-
-
-
-
-
+.widget__item {
+    font-size: 0;
+}
